
<resources>
<string name="app_name">My App Portfolio</string>

<string name="hello_world">Hello world!</string>
<string name="action_settings">Settings</string>
<string name="title_string">My Nanodegree Apps!</string>
<string name="spotify_string">SPOTIFY STREAMER</string>
<string name="scores_string">SCORES APP</string>
<string name="library_string">LIBRARY APP</string>
<string name="build_string">BUILD IT BIGGER</string>
<string name="xyz_string">XYZ READER</string>
<string name="capstone_string">CAPSTONE: MY OWN APP</string>
</resources>