<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/title_string"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="sans" />

    <Button style="@style/ButtonStyle"
        android:id="@+id/button_spotify"
        android:layout_below="@+id/titleText"
        android:background="@color/button_color"
        android:text="@string/spotify_string"
        android:onClick="showToast" />

    <Button style="@style/ButtonStyle"
        android:id="@+id/button_scores"
        android:layout_below="@+id/button_spotify"
        android:background="@color/button_color"
        android:text="@string/scores_string"
        android:onClick="showToast" />

    <Button style="@style/ButtonStyle"
        android:id="@+id/button_library"
        android:layout_below="@id/button_scores"
        android:background="@color/button_color"
        android:text="@string/library_string"
        android:onClick="showToast" />

    <Button style="@style/ButtonStyle"
        android:id="@+id/button_build"
        android:layout_below="@id/button_library"
        android:background="@color/button_color"
        android:text="@string/build_string"
        android:onClick="showToast" />

    <Button style="@style/ButtonStyle"
        android:id="@+id/button_xyz"
        android:layout_below="@id/button_build"
        android:background="@color/button_color"
        android:text="@string/xyz_string"
        android:onClick="showToast" />

    <Button style="@style/ButtonStyle"
        android:id="@+id/button_capstone"
        android:layout_below="@id/button_xyz"
        android:background="@color/myapp_button_color"
        android:text="@string/capstone_string"
        android:textColor="@color/myapp_text_color"
        android:onClick="showToast" />

</RelativeLayout>
